2005-05-12  James Henstridge  <james@jamesh.id.au>

	* font-method.c (ensure_font_list): use NULL as the var args
	terminator rather than 0.  Patch from Stanislav Brabec
	<sbrabec@suse.cz>, fixing bug #302056.

2005-02-02  Kjartan Maraas  <kmaraas@gnome.org>

	* font-method.c: (fill_file_info): Plug a leak.
	Closes bug #165312.
	* thumbnailer.c: (main): Remove unused var

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* font-method.c: (ensure_font_list): NULL vs. 0
	* ftstream-vfs.c: (vfs_stream_close): Same.

2004-12-10  James Henstridge  <james@jamesh.id.au>

	* Makefile.am (install-desktop-database): update the desktop file
	database on install, since we install a new mime action.

	* font-view.c (get_font): don't free the pattern when creating the
	font object, since XftFontOpenPattern takes ownership of the
	pattern.

	* gnome-font-viewer.desktop.in.in (Exec): use %u instead of %U,
	since we only support openning one file.

2004-11-28  James Henstridge  <james@jamesh.id.au>

	* thumbnailer.c (main): use gnome_vfs_make_uri_from_shell_arg() to
	parse the first argument.
	(main): if the glyphs for 'A' and 'a' aren't found, pick some
	other ones so we display something possibly relevant.
	(draw_char): pass in a glyph index rather than a character.

	* font-view.c: apply Federic Zhang <federic.zhang@sun.com>'s patch
	to speed up loading of large (eg. CJK) fonts, plus a few small bug
	fixes.  Fixes bug #142878.
	(set_icon): use gtk_window_set_icon_name() to set the icon.  Also,
	get the correct icon theme object for the window's screen.

2004-11-27  James Henstridge  <james@jamesh.id.au>

	* Makefile.am: get rid of old mime stuff.

	* gnome-font-viewer.desktop.in.in (Exec): add a "%U" to the
	command line, so Nautilus will run gnome-font-viewer for stuff
	under the fonts:/// URI.

	* Makefile.am: fix build rules for Nautilus stuff.

	* fontilus-context-menu.c: convert to a Nautilus extension.

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1
