@@ -1,3 +1,8 @@
+2005-08-04  Paolo Borelli  <pborelli@katamail.com>
+
+	* font-view.c (add_face_info): follow symlinks when getting
+	info. Fixes part of #309744.
+
 2005-05-12  James Henstridge  <james@jamesh.id.au>
 
 	* font-method.c (ensure_font_list): use NULL as the var args
